<?xml version="1.0"?>
<package format="2">
  <name>beginner_tutorials_python</name>
  <version>0.0.0</version>
  <description>The beginner_tutorials_python</description>

  <maintainer email="takahiro.miki1992@gmail.com">Takahiro Miki</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>catkin_simple</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

</package>
